I created Two more page as per requirment High Performan Models link to the dropdown and 5th page RequestForm lint to the footer section of Contact Us

--- a/HighPerformanceModels.html
+++ b/HighPerformanceModels.html
@@ -76,18 +76,14 @@
                     <div>
                         <!-- Main Container -->
 <div>
-    <img class="w-screen" src="./assets/asset_images/Component 15 ΓÇô 2.png" alt="">
+    <img class="w-[200vh]" src="./assets/asset_images/Component 15 ΓÇô 2.png" alt="">
 </div>
 
 <!-- Images Container -->
-<div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-2 gap-6 my-5">
-    <img class="w-20 h-20" src="./assets/asset_images/Component 16 ΓÇô 2.png" alt="">
-    <img class="w-20 h-20" src="./assets/asset_images/Component 17 ΓÇô 2.png" alt="">
-    <img class="w-20 h-20" src="./assets/asset_images/Component 18 ΓÇô 2.png" alt="">
+<div class="flex my-5 space-x-6 lg:flex-wrap flex-wrap md:justify-start">
+     
     <img class="w-20 h-20 rounded-md bg-[#CCCCCC]">
 </div>
-
-
 
                         <div class="bg-[#20205E] w-56 py-2 flex rounded-xl my-8">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#2BDAFA"
