--- a/AboutOxAir.html
+++ b/AboutOxAir.html
@@ -12,7 +12,7 @@
     <section class="bg-[#dddddd]">
         <section class="bg-[#FFFFFF] mx-4 sm:mx-8 lg:mx-24 border-2">
 
-            <header class="lg:px-24 px-8 bg-white flex flex-wrap items-center py-4 shadow-md relative">
+            <header class="lg:px-24 px-8 bg-white flex flex-wrap items-center py-4 relative">
                 <div class="flex-1 flex justify-between items-center">
                     <a href="#" class="text-xl"><img class="w-full" src="./assets/asset_images/Oxair-Logo.png" alt=""></a>
                 </div>
@@ -24,9 +24,9 @@
                 </label>
                 <input class="hidden" type="checkbox" id="menu-toggle" />
             
-                <div id="menu" class="hidden md:flex md:items-center absolute md:relative top-16 md:top-0 left-0 w-full md:w-auto bg-white md:bg-transparent z-50 md:z-10 shadow md:shadow-none">
+                <div id="menu" class="hidden md:flex md:items-center absolute md:relative top-16 md:top-0 left-0 w-full md:w-auto bg-white md:bg-transparent z-50 md:z-10">
                     <nav>
-                        <ul class="md:flex items-center bg-white text-base sm:space-x-4 p-6 text-gray-700 pt-4 md:pt-0">
+                        <ul class="md:flex items-center bg-white text-base sm:space-x-4 p-2 text-gray-700 pt-4 md:pt-0">
                             <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">Home</a></li>
                             <li>
                                 <div onclick="toggleDropdown('dropdown1')" class="flex items-center cursor-pointer relative">
@@ -39,9 +39,10 @@
                                 </div>
                                 <!-- Dropdown content -->
                                 <div id="dropdown1" class="absolute p-2 bg-white border rounded font-sans font-semibold shadow hidden z-50">
-                                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">High Performance Models</a>
-                                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Super Saver Models</a>
-                                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Other Products</a>
+                                    <a href="./HighPerformanceModels.html" class="block px-4 py-2   hover:text-[#2BDAFA]">High Performance Models</a>
+                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">Super Saver Models</a>
+                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">Oxair Pressure Vessels</a>
+                                    <a href="#" class="block px-4 py-2  hover:text-[#2BDAFA]">Other Products</a>
                                 </div>
                             </li>
                             <li><a href="./AboutOxAir.html" class="hover:underline font-sans font-semibold text-[#20205E]">About Oxair India</a></li>
@@ -509,7 +510,7 @@
                                     class="hover:underline">Home</a> | <a href="./OurProducts.html"
                                     class="hover:underline">Products</a> | <a href="./AboutOxAir.html"
                                     class="hover:underline">About Oxair India</a> | <a href="#"
-                                    class="hover:underline">Resources Blog</a> | <a href="#"
+                                    class="hover:underline">Resources Blog</a> | <a href="./RequestForm.html"
                                     class="hover:underline">Contact Us</a></p>
                         </div>
                         <div class="text-center lg:text-left">
