--- a/RequestForm.html
+++ b/RequestForm.html
@@ -141,26 +141,7 @@
             </main>
             <footer class="mx-4 sm:mx-8 lg:mx-24 mt-8">
                 <section>
-                    <div
-                        class="bg-[#20205E] py-6 rounded-xl flex flex-col lg:flex-row gap-4 px-4 sm:px-10 items-center">
-                        <div class="lg:w-[26rem] text-center lg:text-left">
-                            <p class="text-3xl font-sans font-bold text-white">Contact Us Today</p>
-                            <p class="text-lg font-sans font-medium text-[#2BDAFA] mt-2">Unleash the power of our oxygen
-                                generators to transform your operations.</p>
-                        </div>
-                        <div class="hidden lg:block border-l border-solid border-[#2BDAFA] h-28"></div>
-                        <div class="flex flex-col lg:flex-row justify-around gap-10 items-center">
-                            <div class="text-center">
-                                <img class="w-12 mx-auto" src="./assets/asset_icons/Layer -1.png" alt="Phone icon">
-                                <p class="text-2xl text-[#39D000] font-semibold mt-2">044-29560328</p>
-                            </div>
-                            <div class="text-center">
-                                <img class="w-12 mx-auto" src="./assets/asset_icons/Layer 2.png" alt="Email icon">
-                                <p class="text-lg text-[#39D000] mt-2 font-sans font-medium">oxairindia@gmail.com</p>
-                            </div>
-                        </div>
-                    </div>
-
+                     <hr class="border-1">
                     <img class="w-fit my-8 mx-auto lg:mx-0" src="./assets/asset_images/Oxair-Logo.png" alt="">
                     <div class="flex flex-col lg:flex-row justify-between gap-12">
                         <div class="text-center lg:text-left">
