As per the requirment changes are done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
                     <nav>
                         <ul class="md:flex items-center bg-white text-base sm:space-x-4 p-2 text-gray-700 pt-4 md:pt-0">
                             <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">Home</a></li>
+                            <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">About Us</a></li>
+                            <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">Products</a></li>
                             <li>
                                 <div onclick="toggleDropdown('dropdown1')" class="flex items-center cursor-pointer relative">
                                     <!-- Dropdown button -->
-                                    <button class="text-[#20205E] py-2 rounded relative z-10 bg-white font-sans font-semibold">Our Products</button>
+                                    <button class="text-[#20205E] py-2 rounded relative z-10 bg-white font-sans font-semibold">Resources </button>
                                     <!-- Dropdown icon -->
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
@@ -39,14 +41,13 @@
                                 </div>
                                 <!-- Dropdown content -->
                                 <div id="dropdown1" class="absolute p-2 bg-white border rounded font-sans font-semibold shadow hidden z-50">
-                                    <a href="./HighPerformanceModels.html" class="block px-4 py-2   hover:text-[#2BDAFA]">High Performance Models</a>
-                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">Super Saver Models</a>
-                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">Oxair Pressure Vessels</a>
-                                    <a href="#" class="block px-4 py-2  hover:text-[#2BDAFA]">Other Products</a>
+                                    <a href="./HighPerformanceModels.html" class="block px-4 py-2   hover:text-[#2BDAFA]">Understanding Our Products</a>
+                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">FAQs</a>
+                                    <a href="#" class="block px-4 py-2   hover:text-[#2BDAFA]">Company and Industry News</a>
                                 </div>
                             </li>
-                            <li><a href="./AboutOxAir.html" class="hover:underline font-sans font-semibold text-[#20205E]">About Oxair India</a></li>
-                            <li><button class="rounded-3xl font-sans font-semibold text-sm px-6 py-1 bg-[#3AD003] text-white hover:bg-green-700 mt-4 lg:mt-0 lg:ml-4">Get Quote</button></li>
+                             
+                             <a href=""><li><button class="rounded-3xl font-sans font-semibold text-sm px-6 py-1 bg-[#3AD003] text-white hover:bg-green-700 mt-4 lg:mt-0 lg:ml-4">Get Quote</button></li></a>
                         </ul>
                     </nav>
                 </div>
@@ -56,14 +57,17 @@
                     <div class="relative my-3">
                         <img class="w-full" src="./assets/asset_images/Component 2 ΓÇô 2.png" alt="blank">
                         <div class="absolute top-1/2 transform -translate-y-1/2 left-4 sm:left-12 font-sans my-3">
-                            <p class=" lg:w-[24rem] text-white text-[10px] sm:text-sm md:text-lg lg:text-2xl font-bold">
-                                COST-EFFECTIVE SAFE & CONVENIENT</p>
+                            <p class=" lg:w-[24rem] text-white sm:text-xs md:text-base lg:text-2xl font-bold">
+                                Cost-effective, safe, convenient & <br> low maintenance</p>
                             <p
-                                class="lg:w-[18rem] md:w-[12rem] w-[7rem] text-[#2BDAFA] text-xs sm:text-sm md:text-lg lg:text-xl">
+                                class="lg:w-[18rem] md:w-[12rem] w-[7rem] mt-2 text-[#2BDAFA] text-xs md:text-lg lg:text-xl">
                                 Oxygen Generators for your business</p>
-                            <button
-                                class="rounded-3xl px-6 py-1 font-sans font-semibold text-xs sm:text-sm bg-[#3AD003] mt-4 sm:mt-6 text-white">Learn
-                                More</button>
+                                <div class="my-3">
+                                    <a href="/learnMoreButton.html"
+                                       class="rounded-3xl px-6 py-1 font-sans font-semibold text-xs md:text-sm lg:text-base bg-[#3AD003] text-white">Learn
+                                       More</a>
+                                </div>
+                                
                         </div>
                     </div>
 
