All links and content made changes

--- a/HighPerformanceModels.html
+++ b/HighPerformanceModels.html
@@ -45,7 +45,7 @@
                                     <a href="#" class="block px-4 py-2  hover:text-[#2BDAFA]">Other Products</a>
                                 </div>
                             </li>
-                            <li><a href="./AboutOxAir.html" class="hover:underline font-sans font-semibold text-[#20205E]">About Oxair India</a></li>
+                            <li><a href="./AboutUs.html" class="hover:underline font-sans font-semibold text-[#20205E]">About Oxair India</a></li>
                             <li><button class="rounded-3xl font-sans font-semibold text-sm px-6 py-1 bg-[#3AD003] text-white hover:bg-green-700 mt-4 lg:mt-0 lg:ml-4">Get Quote</button></li>
                         </ul>
                     </nav>
@@ -206,11 +206,11 @@
                         <div class="flex flex-col lg:flex-row justify-around gap-10 items-center">
                             <div class="text-center">
                                 <img class="w-12 mx-auto" src="./assets/asset_icons/Layer -1.png" alt="Phone icon">
-                                <p class="text-2xl text-[#39D000] font-semibold mt-2">044-29560328</p>
+                                <p class="text-2xl text-[#39D000] font-semibold mt-2">+91-44-29560328</p>
                             </div>
                             <div class="text-center">
                                 <img class="w-12 mx-auto" src="./assets/asset_icons/Layer 2.png" alt="Email icon">
-                                <p class="text-lg text-[#39D000] mt-2 font-sans font-medium">oxairindia@gmail.com</p>
+                                <p class="text-lg text-[#39D000] mt-2 font-sans font-medium">Inquiries@oxair.in</p>
                             </div>
                         </div>
                     </div>
@@ -224,11 +224,17 @@
                         </div>
                         <div class="text-center lg:text-left">
                             <p class="text-base text-[#202020] font-sans font-semibold my-2">Quick Links</p>
-                            <p class="font-sans font-normal text-sm text-[#888888]"><a href="./index.html"
-                                    class="hover:underline">Home</a> | <a href="./OurProducts.html"
-                                    class="hover:underline">Products</a> | <a href="./AboutOxAir.html"
-                                    class="hover:underline">About Oxair India</a> | <a href="#"
-                                    class="hover:underline">Resources Blog</a> | <a href="./RequestForm.html"
+                            <p class="font-sans font-normal text-sm text-[#888888]">
+                                <a href="./index.html"
+                                    class="hover:underline">Home</a> | 
+                                    <a href="./OurProducts.html"
+                                    class="hover:underline">Products</a> | 
+                                    <a href="./Nitrogen.html"
+                                    class="hover:underline">About Oxair India</a> |
+                                    
+                                    <a href="#"
+                                    class="hover:underline">Resources Blog</a> | 
+                                    <a href="./RequestForm.html"
                                     class="hover:underline">Contact Us</a></p>
                         </div>
                         <div class="text-center lg:text-left">
@@ -245,14 +251,13 @@
                                     Privacy</span>
                             </p>
                         </div>
-                        <div class="flex gap-4 ml-52">
+                        <div class="flex gap-4 ml-64">
                             <a href="#"><img src="./assets/asset_icons/Component 28 ΓÇô 2.png" alt=""></a>
                             <a href="#"> <img src="./assets/asset_icons/Component 29 ΓÇô 2.png" alt=""></a>
                             <a href="#"><img src="./assets/asset_icons/Component 30 ΓÇô 2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="px-6 py-1 bg-[#20205E] rounded-tl-full rounded-tr-full border-t border-[#20205E]">
-                        <!-- Content here -->
                     </div>
                 </section>
             </footer>
