--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         <ul class="md:flex items-center bg-white text-base sm:space-x-4 p-2 text-gray-700 pt-4 md:pt-0">
                             <li><a href="./index.html"
                                     class="hover:underline text-[#20205E] font-sans font-semibold">Home</a></li>
-                            <li><a href="./index.html"
+                            <li><a href="./AboutUs.html"
                                     class="hover:underline text-[#20205E] font-sans font-semibold">About Us</a></li>
-                            <li><a href="./index.html"
+                            <li><a href="./OurProducts.html"
                                     class="hover:underline text-[#20205E] font-sans font-semibold">Products</a></li>
                             <li>
                                 <div onclick="toggleDropdown('dropdown1')"
@@ -82,7 +82,7 @@
                                 class="lg:w-[18rem] md:w-[12rem] w-[7rem] mt-2 text-[#2BDAFA] text-xs md:text-lg lg:text-xl">
                                 Oxygen Generators for your business</p>
                                 <div class="my-3">
-                                    <a href="/learnMoreButton.html"
+                                    <a href="/IndexLearnMoreButton.html"
                                        class="rounded-3xl px-6 py-1 font-sans font-semibold text-xs md:text-sm lg:text-base bg-[#3AD003] text-white">Learn
                                        More</a>
                                 </div>
@@ -488,11 +488,17 @@
                         </div>
                         <div class="text-center lg:text-left">
                             <p class="text-base text-[#202020] font-sans font-semibold my-2">Quick Links</p>
-                            <p class="font-sans font-normal text-sm text-[#888888]"><a href="./index.html"
-                                    class="hover:underline">Home</a> | <a href="./index.html"
-                                    class="hover:underline">Products</a> | <a href="#"
-                                    class="hover:underline">About Oxair India</a> | <a href="#"
-                                    class="hover:underline">Resources Blog</a> | <a href="#"
+                            <p class="font-sans font-normal text-sm text-[#888888]">
+                                <a href="./index.html"
+                                    class="hover:underline">Home</a> | 
+                                    <a href="./OurProducts.html"
+                                    class="hover:underline">Products</a> | 
+                                    <a href="./Nitrogen.html"
+                                    class="hover:underline">About Oxair India</a> |
+                                    
+                                    <a href="#"
+                                    class="hover:underline">Resources Blog</a> | 
+                                    <a href="./RequestForm.html"
                                     class="hover:underline">Contact Us</a></p>
                         </div>
                         <div class="text-center lg:text-left">
