--- a/IndexLearnMoreButton.html
+++ b/IndexLearnMoreButton.html
@@ -28,8 +28,8 @@
                     <nav>
                         <ul class="md:flex items-center bg-white text-base sm:space-x-4 p-2 text-gray-700 pt-4 md:pt-0">
                             <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">Home</a></li>
-                            <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">About Us</a></li>
-                            <li><a href="./index.html" class="hover:underline text-[#20205E] font-sans font-semibold">Products</a></li>
+                            <li><a href="./AboutUs.html" class="hover:underline text-[#20205E] font-sans font-semibold">About Us</a></li>
+                            <li><a href="./OurProducts.html" class="hover:underline text-[#20205E] font-sans font-semibold">Products</a></li>
                             <li>
                                 <div onclick="toggleDropdown('dropdown1')" class="flex items-center cursor-pointer relative">
                                     <!-- Dropdown button -->
@@ -122,11 +122,11 @@
                         <div class="flex flex-col lg:flex-row justify-around gap-10 items-center">
                             <div class="text-center">
                                 <img class="w-12 mx-auto" src="./assets/asset_icons/Layer -1.png" alt="Phone icon">
-                                <p class="text-2xl text-[#39D000] font-semibold mt-2">044-29560328</p>
+                                <p class="text-2xl text-[#39D000] font-semibold mt-2">+91-44-29560328</p>
                             </div>
                             <div class="text-center">
                                 <img class="w-12 mx-auto" src="./assets/asset_icons/Layer 2.png" alt="Email icon">
-                                <p class="text-lg text-[#39D000] mt-2 font-sans font-medium">oxairindia@gmail.com</p>
+                                <p class="text-lg text-[#39D000] mt-2 font-sans font-medium">Inquiries@oxair.in</p>
                             </div>
                         </div>
                     </div>
@@ -140,11 +140,17 @@
                         </div>
                         <div class="text-center lg:text-left">
                             <p class="text-base text-[#202020] font-sans font-semibold my-2">Quick Links</p>
-                            <p class="font-sans font-normal text-sm text-[#888888]"><a href="./index.html"
-                                    class="hover:underline">Home</a> | <a href="./OurProducts.html"
-                                    class="hover:underline">Products</a> | <a href="./AboutOxAir.html"
-                                    class="hover:underline">About Oxair India</a> | <a href="#"
-                                    class="hover:underline">Resources Blog</a> | <a href="./RequestForm.html"
+                            <p class="font-sans font-normal text-sm text-[#888888]">
+                                <a href="./index.html"
+                                    class="hover:underline">Home</a> | 
+                                    <a href="./OurProducts.html"
+                                    class="hover:underline">Products</a> | 
+                                    <a href="./Nitrogen.html"
+                                    class="hover:underline">About Oxair India</a> |
+                                    
+                                    <a href="#"
+                                    class="hover:underline">Resources Blog</a> | 
+                                    <a href="./RequestForm.html"
                                     class="hover:underline">Contact Us</a></p>
                         </div>
                         <div class="text-center lg:text-left">
@@ -161,14 +167,13 @@
                                     Privacy</span>
                             </p>
                         </div>
-                        <div class="flex gap-4 ml-52">
+                        <div class="flex gap-4 ml-64">
                             <a href="#"><img src="./assets/asset_icons/Component 28 ΓÇô 2.png" alt=""></a>
                             <a href="#"> <img src="./assets/asset_icons/Component 29 ΓÇô 2.png" alt=""></a>
                             <a href="#"><img src="./assets/asset_icons/Component 30 ΓÇô 2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="px-6 py-1 bg-[#20205E] rounded-tl-full rounded-tr-full border-t border-[#20205E]">
-                        <!-- Content here -->
                     </div>
                 </section>
             </footer>
