--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     <p class="mt-4 text-[#20205E]">SEWAGE</p>
                                 </a>
                             </div>
-                            <div class="text-center tab">
+                            <!-- <div class="text-center tab">
                                 <p>MORE</p>
                                 <div class="flex gap-2 mt-8 justify-center">
                                     <button
@@ -264,7 +264,7 @@
                                     <button
                                         class="w-3 h-3 rounded-full border-2 border-solid border-[#20205E] bg-white"></button>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="bg-[#20205E] sm:mx-auto rounded-lg text-white mt-4 py-2 px-6">
                             <div id="tab1">
